syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.architectural.trends.grpc.restaurant";
option java_multiple_files = true;

service RestaurantService {
  rpc getRestaurantDishesForCustomer(RestaurantDishesRequest) returns (RestaurantDishesResponse);
}

message RestaurantDishesRequest {
  int32 customer_id = 1;
}

message RestaurantDishesResponse {
  repeated RestaurantDish restaurantDish = 1; // Collection of restaurant dishes inside the response
}

message RestaurantDish {
  int32 dish_id = 1;
  int32 customer_id = 2;
  int32 no_of_items = 4;
  double total_amount = 5;
  google.protobuf.Timestamp date = 6; // Field number 5 in the restaurant dish message
}